Bug 221288 XUL tree builder abuses tree batching r=jan sr=alecf